--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -4,6 +4,7 @@
 
 <table>
     <tr>
+        <th>Patient ID</th>
         <th>First Name</th>
         <th>Last Name</th>
         <th>Diagnosis</th>
@@ -11,7 +12,8 @@
         <th>Actions</th>
     </tr>
     <% @patients.each do |patient| %>
-        <tr>
+        <tr>            
+            <td><%= link_to patient.id, patient_path(patient) %></td>
             <td> <%= patient.first_name %></td>
             <td> <%= patient.last_name %></td>
             <td> <%= patient.diagnosis %></td>
