add NEW route for patient

--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,7 +1,8 @@
 <h1>All Patients:</h1>
+<%= link_to "Add New Patient", new_patient_path %>
 
-<br><br>
-
+<br>
+<br>
 <table>
     <tr>
         <th>Patient ID</th>
